# iono

./: .gitignore  LICENSE  dagger.json  lint-staged.config.js  package.json
.github/workflows/: ci.yml
ci/: package.json  tsconfig.json
ci/src/: index.ts  rust.ts  worker.ts
docs/: README.md  package-lock.json  package.json
infra/docs/: package.json  wrangler.jsonc
infra/server/: package.json  tsconfig.json  wrangler.jsonc
infra/server/src/: index.ts
infra/web/: package.json  wrangler.jsonc
mobile/: pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/iono/iono/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
server/: .env.example  Cargo.toml  Dockerfile
server/crates/core/: Cargo.toml
server/crates/core/src/: bootstrap.rs  config.rs  content_type.rs  db.rs  error.rs  lib.rs  openapi.rs  quota.rs  state.rs  telemetry.rs  web.rs
server/crates/core/src/auth/: api_key.rs  authed.rs  jwt.rs  mod.rs  password.rs  token.rs  totp.rs  webauthn.rs
server/crates/core/src/entities/: api_key.rs  domain.rs  embed_preset.rs  embed_settings.rs  file.rs  folder.rs  mod.rs  oauth_account.rs  passkey.rs  paste.rs  plan.rs  short_link.rs  stripe_event.rs  subscription.rs  totp_recovery_code.rs  user.rs  user_settings.rs
server/crates/core/src/storage/: mod.rs  s3.rs
server/crates/gateway/: Cargo.toml
server/crates/gateway/src/: auth.rs  error.rs  main.rs  state.rs  webauthn_sessions.rs
server/crates/gateway/src/routes/: api_keys.rs  change_password.rs  login.rs  me.rs  mod.rs  rate_limit.rs  settings.rs  signup.rs  totp.rs
server/crates/gateway/src/routes/auth/: login.rs  mod.rs  passkey_login_finish.rs  passkey_login_start.rs  verify_passkey_finish.rs  verify_passkey_start.rs  verify_totp.rs
server/crates/gateway/src/routes/user/: api_keys.rs  me.rs  mod.rs  settings.rs  sharex.rs
server/crates/gateway/src/routes/user/links/: delete.rs  list.rs
server/crates/gateway/src/routes/user/passkeys/: list.rs  mod.rs  register_finish.rs  register_start.rs  remove.rs  require.rs
server/crates/gateway/src/routes/user/pastes/: create.rs  delete.rs  list.rs
server/crates/gateway/src/routes/user/totp/: confirm.rs  disable.rs  mod.rs  recovery_codes.rs  setup.rs
server/crates/ingest/: Cargo.toml
server/crates/ingest/src/: auth.rs  error.rs  main.rs  state.rs
server/crates/ingest/src/routes/: link.rs  mod.rs  paste.rs  upload.rs
server/crates/janitor/: Cargo.toml
server/crates/janitor/src/: main.rs  state.rs  sweep.rs
server/crates/janitor/src/routes/: mod.rs  sweep.rs
server/crates/viewer/: Cargo.toml
server/crates/viewer/src/: embed.rs  main.rs  state.rs
server/crates/viewer/src/routes/: link.rs  mod.rs  paste.rs  view.rs
server/crates/viewer/src/routes/view/: mod.rs  page.rs  raw.rs  raw_with_prefix.rs  view_with_prefix.rs
server/migrations/: 20260709170814_create_plans.sql  20260709170902_create_users.sql  20260709171447_create_totp_recovery_codes.sql  20260709171623_create_domains.sql  20260709171958_create_folders.sql  20260709172041_create_api_keys.sql  20260709172215_create_files.sql  20260709172633_create_embed_presets.sql  20260709172709_create_embed_settings.sql  20260709173152_create_pastes.sql  20260709173240_create_short_links.sql  20260709173618_create_oauth_accounts.sql  20260710000700_seed_default_domains.sql  20260710004551_add_user_token_version.sql  20260710012358_enforce_one_api_key_per_user.sql  20260710154709_restructure_files_display_name.sql  20260710164130_create_user_settings.sql  20260710164242_add_path_prefix_to_domain_settings.sql  20260710164418_create_redemption_codes.sql  20260710164449_add_encrypted_to_files.sql  20260710164529_create_passkeys.sql  20260710164707_add_deleted_at_to_users.sql  20260714143854_drop_views.sql  20260717120000_passkeys_for_webauthn_rs.sql  20260724120000_drop_short_link_clicks.sql
server/src/: main.rs
web/: README.md  package-lock.json  package.json
