[workspace]
resolver = "2"
members = ["crates/core", "crates/gateway", "crates/ingest"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Evie Fogarty"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
iono-core = { path = "crates/core" }

actix-web = "4"
actix-multipart = "0.8.0"
actix-governor = "0.7"

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "migrate",
    "macros",
    "json",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4"] }

dotenvy = "0.15.0"

tracing = "0.1.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-actix-web = "0.7"

thiserror = "2.0.0"

async-trait = "0.1"
futures-util = "0.3"
secrecy = "0.10"
sha2 = "0.11.0"
hex = "0.4"
rand = "0.10.2"
argon2 = "0.5"
jsonwebtoken = "9"
regex = "1"
infer = "0.19.0"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "webp",
] }

aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
