[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gateway",
    "crates/ingest",
    "crates/viewer",
    "crates/janitor",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Evie Fogarty"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
iono-core = { path = "crates/core" }

actix-web = "4"
actix-multipart = "0.8.0"
actix-governor = "0.7"
actix-cors = "0.7"
actix-web-httpauth = "0.8"

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "migrate",
    "macros",
    "json",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4"] }

dotenvy = "0.15.0"

tracing = "0.1.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-actix-web = "0.7"

thiserror = "2.0.0"

async-trait = "0.1"
futures-util = "0.3"
bytes = "1"
percent-encoding = "2"
secrecy = "0.10"
sha2 = "0.11.0"
subtle = "2"
hex = "0.4"
rand = "0.10.2"
argon2 = "0.5"
jsonwebtoken = "9"
email_address = "0.2"
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5", features = ["actix_extras"] }
infer = "0.19.0"
humansize = "2"
maud = "0.27"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "webp",
] }

aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
