[package]
name = "iono-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true

thiserror.workspace = true

sqlx.workspace = true

tokio.workspace = true
async-trait.workspace = true
secrecy.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true

tracing.workspace = true

infer.workspace = true
image.workspace = true

aws-sdk-s3.workspace = true
aws-config.workspace = true
