[package]
name = "iono-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
actix-web-httpauth.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

thiserror.workspace = true

sqlx.workspace = true

tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true
bytes.workspace = true
percent-encoding.workspace = true
secrecy.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
utoipa.workspace = true

dotenvy.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

infer.workspace = true
image.workspace = true

aws-sdk-s3.workspace = true
aws-config.workspace = true
