[package]
name = "iono-ingest"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
iono-core.workspace = true

actix-web.workspace = true
actix-multipart.workspace = true

tokio.workspace = true
futures-util.workspace = true
sqlx.workspace = true

serde_json.workspace = true
uuid.workspace = true

dotenvy.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
