[package]
name = "iono-ingest"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
iono-core.workspace = true

actix-web.workspace = true
actix-multipart.workspace = true
actix-cors.workspace = true
actix-web-httpauth.workspace = true
utoipa.workspace = true

tokio.workspace = true
sqlx.workspace = true

serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
percent-encoding.workspace = true

dotenvy.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
