[package]
name = "iono-viewer"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
iono-core.workspace = true

actix-web.workspace = true

tokio.workspace = true
sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
percent-encoding.workspace = true
humansize.workspace = true
maud.workspace = true

dotenvy.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
